syntax = "proto3";
package client;

option go_package = "./client/clientpb";
message Date {

  int32 year = 1;

  int32 month = 2;

  int32 day = 3;
}
message ClientFirstCredRequest {
  string name = 1;
  Date birthday = 2;
  string phone = 3;

}

message ClientFirstCredResponse {
  string result = 1;
}
message ClientPhoneProofRequest{
  string phone = 1;
}


message ClientPhoneProofResponse{
  string isValid = 1;
}
message ClientPhoneTokenRequest{
  string phone = 1;
  string token = 2;
}
message ClientPhoneTokenResponse{
  string result = 1;
}

service ClientService{
  rpc PhoneProve(ClientPhoneProofRequest) returns (ClientPhoneProofResponse);
  rpc FirstCred(ClientFirstCredRequest) returns (ClientFirstCredResponse);
  rpc PhoneToken(ClientPhoneTokenRequest) returns (ClientPhoneTokenResponse);

}